--- a/index.html
+++ b/index.html
@@ -5,9 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
     <title>Calculator App</title>
   </head>
   <body>
-    <h1>Calculator</h1>
+    <h1>Calculator</h1> 
+    <div class="calculatorFrame">
+      <p id="display"> </p>
+      <table>
+        <tr>
+          <td><button type="button">(</button></td>
+          <td><button type="button">)</button></td>
+          <td><button type="button">%</button></td>
+          <td><button type="button">←</button></td>
+        </tr>
+        <tr>
+          <td><button type="button">7</button></td>
+          <td><button type="button">8</button></td>
+          <td><button type="button">9</button></td>
+          <td><button type="button">/</button></td>
+        </tr>
+        <tr>
+          <td><button type="button">4</button></td>
+          <td><button type="button">5</button></td>
+          <td><button type="button">6</button></td>
+          <td><button type="button">*</button></td>
+        </tr>
+        <tr>
+          <td><button type="button">1</button></td>
+          <td><button type="button">2</button></td>
+          <td><button type="button">3</button></td>
+          <td><button type="button">-</button></td>
+        </tr>
+        <tr>
+          <td><button type="button">0</button></td>
+          <td><button type="button">.</button></td>
+          <td><button type="button">=</button></td>
+          <td><button type="button">+</button></td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
