Add functions to buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
     <title>Calculator App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   </head>
   <body>
     <h1>Calculator</h1> 
@@ -16,36 +17,42 @@
       <p id="display"> </p>
       <table>
         <tr>
-          <td><button type="button">(</button></td>
-          <td><button type="button">)</button></td>
-          <td><button type="button">%</button></td>
-          <td><button type="button">←</button></td>
+          <td><button type="button" value="(">(</button></td>
+          <td><button type="button" value=")">)</button></td>
+          <td><button type="button" value="%">%</button></td>
+          <td><button type="button" value="←">←</button></td>
         </tr>
         <tr>
-          <td><button type="button">7</button></td>
-          <td><button type="button">8</button></td>
-          <td><button type="button">9</button></td>
-          <td><button type="button">/</button></td>
+          <td><button type="button" value="7">7</button></td>
+          <td><button type="button" value="8">8</button></td>
+          <td><button type="button" value="9">9</button></td>
+          <td><button type="button" value="/">/</button></td>
         </tr>
         <tr>
-          <td><button type="button">4</button></td>
-          <td><button type="button">5</button></td>
-          <td><button type="button">6</button></td>
-          <td><button type="button">*</button></td>
+          <td><button type="button" value="4">4</button></td>
+          <td><button type="button" value="5">5</button></td>
+          <td><button type="button" value="6">6</button></td>
+          <td><button type="button" value="*">*</button></td>
         </tr>
         <tr>
-          <td><button type="button">1</button></td>
-          <td><button type="button">2</button></td>
-          <td><button type="button">3</button></td>
-          <td><button type="button">-</button></td>
+          <td><button type="button" value="1">1</button></td>
+          <td><button type="button" value="2">2</button></td>
+          <td><button type="button" value="3">3</button></td>
+          <td><button type="button" value="-">-</button></td>
         </tr>
         <tr>
-          <td><button type="button">0</button></td>
-          <td><button type="button">.</button></td>
-          <td><button type="button">=</button></td>
-          <td><button type="button">+</button></td>
+          <td><button type="button" value="0">0</button></td>
+          <td><button type="button" value=".">.</button></td>
+          <td><button type="button" value="=">=</button></td>
+          <td><button type="button" value="+">+</button></td>
         </tr>
       </table>
     </div>
+
+
+
+    
+
   </body>
+  <script src="calc.js"></script>
 </html>
