--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <tr>
           <td><button type="button" value="(">(</button></td>
           <td><button type="button" value=")">)</button></td>
-          <td><button type="button" value="%">%</button></td>
+          <td><button type="button" value="C">AC</button></td>
           <td><button type="button" value="←">←</button></td>
         </tr>
         <tr>
@@ -55,4 +55,5 @@
 
   </body>
   <script src="calc.js"></script>
+  
 </html>
